deployment/config-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: config-db
  name: config-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: config-db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/datamover-data-mover: "true"
        io.kompose.service: config-db
    spec:
      containers:
        - env:
            - name: MONGO_INITDB_DATABASE
              value: config_db
            - name: MONGO_INITDB_ROOT_PASSWORD
              value: Password@123
            - name: MONGO_INITDB_ROOT_USERNAME
              value: user
          image: gcr.io/data-mover-beta/config_db:latest
          name: config-db
          ports:
            - containerPort: 27017
          resources: {}
      hostname: config-db
      restartPolicy: Always
status: {}
