deployment/config-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: config-service
  name: config-service
spec:
  type: NodePort
  ports:
    - name: "5555"
      port: 5555
      targetPort: 8080
  selector:
    io.kompose.service: config-service
status:
  loadBalancer: {}
